--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "fxjs": "^0.21.3",
     "install": "^0.13.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.0",
     "pm2": "^5.2.2"
   }
-  
 }
