--- a/vue/vue_pr05/package.json
+++ b/vue/vue_pr05/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue_pr03",
+  "name": "vue_pr05",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -22,9 +22,6 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.0.3",
     "prettier": "^2.4.1"
   },
   "eslintConfig": {
@@ -34,8 +31,7 @@
     },
     "extends": [
       "plugin:vue/vue3-essential",
-      "eslint:recommended",
-      "plugin:prettier/recommended"
+      "eslint:recommended"
     ],
     "parserOptions": {
       "parser": "@babel/eslint-parser"
