--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.2",
+    "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "fast-xml-parser": "^4.0.13",
     "fxjs": "^0.21.3",
     "install": "^0.13.0",
     "morgan": "^1.10.0",
