--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.0",
+    "node-telegram-bot-api": "^0.61.0",
     "pm2": "^5.2.2",
     "request": "^2.88.2",
     "socket.io": "^4.5.4"
