--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "fast-xml-parser": "^4.0.13",
     "fxjs": "^0.21.3",
     "install": "^0.13.0",
+    "mongoos": "^0.0.1-security",
+    "mongoose": "^6.8.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.0",
