--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tensorflow/tfjs": "^4.2.0",
     "axios": "^1.2.2",
     "cheerio": "^1.0.0-rc.12",
     "csvtojson": "^2.0.10",
