--- a/vue/vue_pr07/package.json
+++ b/vue/vue_pr07/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tensorflow/tfjs": "^4.2.0",
     "core-js": "^3.8.3",
+    "mongoose": "^6.8.4",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
